1.Moved solution file. 2. Integrated poll.js load logic into the Nancy.LongPoll.dll. 3. Added more info to README.md about sessions and clients.

--- a/Nancy.LongPoll/Nancy.LongPoll.csproj
+++ b/Nancy.LongPoll/Nancy.LongPoll.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ContentModule.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="PollModule.cs" />
     <Compile Include="PollService.cs" />
