Example project improvements

--- a/Nancy.LongPoll.Example/Nancy.LongPoll.Example.csproj
+++ b/Nancy.LongPoll.Example/Nancy.LongPoll.Example.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="ExampleModule.cs" />
+    <Compile Include="ExampleNotificationService.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
