Added some tests

--- a/Nancy.LongPoll.Test/Nancy.LongPoll.Test.csproj
+++ b/Nancy.LongPoll.Test/Nancy.LongPoll.Test.csproj
@@ -48,6 +48,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Libs\Nancy\Nancy.Authentication.Forms.dll</HintPath>
     </Reference>
+    <Reference Include="Nancy.Hosting.Self">
+      <HintPath>..\Libs\Nancy\Nancy.Hosting.Self.dll</HintPath>
+    </Reference>
     <Reference Include="Nancy.Testing, Version=1.2.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Libs\Nancy\Nancy.Testing.dll</HintPath>
@@ -71,6 +74,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="BulkRequestsTest.cs" />
     <Compile Include="PollModuleTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -79,6 +83,9 @@
       <Project>{0c2a950c-98d0-4615-bb38-1fb80729355b}</Project>
       <Name>Nancy.LongPoll</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="TestBulkRequests.html" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
