--- a/Nancy.LongPoll/Nancy.LongPoll.csproj
+++ b/Nancy.LongPoll/Nancy.LongPoll.csproj
@@ -30,9 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Nancy, Version=1.3.0.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="Nancy, Version=1.2.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\allcarsharing\Server\Framework\MSoft.UI.Web\Libs\Nancy.dll</HintPath>
+      <HintPath>..\..\..\..\Nancy.LongPoll\Libs\Nancy\Nancy.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
