--- a/Nancy.LongPoll/Nancy.LongPoll.csproj
+++ b/Nancy.LongPoll/Nancy.LongPoll.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PollAccessControlService.cs" />
     <Compile Include="ContentModule.cs" />
     <Compile Include="DefaultSessionProvider.cs" />
     <Compile Include="Logger.cs" />
